@@ -310,6 +310,41 @@ configure(subprojects.findAll { (!excludeSubProjects.contains(it.name)) }) { pro
         //implementation.exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
     }
 
+    // 编译
+    compileJava {
+        options.compilerArgs += [
+                '-Xlint:unchecked',
+                '-Xlint:deprecation',
+                '--enable-preview',
+                '--add-exports=java.desktop/sun.font=ALL-UNNAMED',
+                '--add-exports=java.base/sun.reflect.generics.tree=ALL-UNNAMED',
+                '--add-exports=java.base/sun.net.www.protocol.ftp=ALL-UNNAMED',
+                '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+                '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
+                '--add-opens=java.base/java.util=ALL-UNNAMED',
+                '--add-opens=java.base/sun.net=ALL-UNNAMED',
+                '--add-opens=java.base/java.math=ALL-UNNAMED',
+                '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED',
+                '--add-opens=java.base/sun.net=ALL-UNNAMED',
+                '--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
+                '--add-opens=java.desktop/sun.font=ALL-UNNAMED',
+                '--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED',
+                '--add-exports=java.desktop/sun.awt=ALL-UNNAMED',
+                '--add-exports=java.desktop/sun.font=ALL-UNNAMED'
+        ]
+    }
+
+    // 执行
+    def enablePreview = '--enable-preview'
+    tasks.withType(JavaExec) {
+        jvmArgs += enablePreview
+    }
+
+    // 测试
+    tasks.withType(Test).all {
+        jvmArgs += enablePreview
+    }
 }
 
 
